<resources>
    <string name="app_name">Party Planner</string>

    <string name="login_sign_up">Login/Sign up</string>
    <string name="login_failed">Login Failed</string>
    <string name="select_party_date">Select party date</string>
    <string name="enter_your_budget">Enter your budget(for one guest)</string>
    <string name="enter_no_of_guest_for_the_party">Enter no. of guest for the party</string>
    <string name="baby_shower">Baby Shower\n(No Alcohol)</string>
    <string name="party_celebration">Party - Celebration</string>
    <string name="select_party_type">Select party type</string>
    <string name="select_food_type">Select Food Type</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="not_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_checklist">Create Checklist</string>
    <string name="checklist">Checklist</string>
    <string name="unfinished_checklist">Unfinished Checklist</string>
    <string name="past_checklist">Past Checklist</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="select_budget">Select budget</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="very_high">Very High</string>
    <string name="home">Home</string>
    <string name="other_venue">Other Venue</string>
    <string name="select_party_destination">Select party destination</string>

    <string name="more_than_800">More than $800</string>
    <string name="add_food">Add food</string>
    <string name="remove_food">Remove food</string>

    <string name="select_venue">Select venue</string>
    <string name="party_details">Party Details</string>
    <string name="party_date">Party Date:</string>
    <string name="destination_type">Destination Type:</string>
    <string name="total_guest">Total Guest:</string>
    <string name="party_type">Party Type:</string>
    <string name="selected_food">Selected Food</string>
    <string name="selected_venue">Selected Venue</string>
    <string name="estimated_party_budget">Estimated Party Budget</string>
    <string name="check_all_details">Check all details</string>
    <string name="selected_caterer">Selected Caterer</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_history_found">No history found!</string>
    <string name="select_caterer">Select caterer</string>
    <string name="generate_results">Generate Results</string>
</resources>
